--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     </button>
                 </div>
                 <div class="about-lms__img">
-                    <img class="about-lms--img" src="../img/people_pic_1.png" alt="">
+                    <img class="about-lms--img" src="img/people_pic_1.png" alt="">
                 </div>
             </div>
         </section>
@@ -126,31 +126,31 @@
             <div class="row h3">Which one you interested?</div>
             <div class="all-course basic-grid all-course--grid">
                 <div class="all-course__items">
-                    <img src="../img/android_logo.png" alt="" class="all-course__img">
+                    <img src="img/android_logo.png" alt="" class="all-course__img">
                     <h5 class="all-course__h5">android</h5>
                 </div>
                 <div class="all-course__items">
-                    <img src="../img/android_logo.png" alt="" class="all-course__img">
-                    <h5 class="all-course__h5">android</h5>
-
-                </div>
-                <div class="all-course__items">
-                    <img src="../img/android_logo.png" alt="" class="all-course__img">
+                    <img src="img/android_logo.png" alt="" class="all-course__img">
                     <h5 class="all-course__h5">android</h5>
 
                 </div>
                 <div class="all-course__items">
-                    <img src="../img/ps_logo.png" alt="" class="all-course__img">
+                    <img src="img/android_logo.png" alt="" class="all-course__img">
+                    <h5 class="all-course__h5">android</h5>
+
+                </div>
+                <div class="all-course__items">
+                    <img src="img/ps_logo.png" alt="" class="all-course__img">
                     <h5 class="all-course__h5">photoshop</h5>
 
                 </div>
                 <div class="all-course__items">
-                    <img src="../img/ps_logo.png" alt="" class="all-course__img">
+                    <img src="img/ps_logo.png" alt="" class="all-course__img">
                     <h5 class="all-course__h5">photoshop</h5>
 
                 </div>
                 <div class="all-course__items">
-                    <img src="../img/ps_logo.png" alt="" class="all-course__img">
+                    <img src="img/ps_logo.png" alt="" class="all-course__img">
                     <h5 class="all-course__h5">photoshop</h5>
 
                 </div>
@@ -159,7 +159,7 @@
             <div class="row h3">Latest Courses</div>
             <div class="top-course top-course--grid  basic-grid">
                 <div class="card-large">
-                    <img src="../img/course_img_1.png" alt="" class="card-large__img">
+                    <img src="img/course_img_1.png" alt="" class="card-large__img">
                     <div class="card-large__container">
                         <i class="fas fa-folder-open card-large__icon">business</i>
                         <span class="card-large__value">$159.00</span>
@@ -177,7 +177,7 @@
                     </div>
                 </div>
                 <div class="card-large">
-                    <img src="../img/course_img_2.png" alt="" class="card-large__img">
+                    <img src="img/course_img_2.png" alt="" class="card-large__img">
                     <div class="card-large__container">
                         <i class="fas fa-folder-open card-large__icon">Computer Science</i>
                         <span class="card-large__value">$159.00</span>
@@ -195,7 +195,7 @@
                     </div>
                 </div>
                 <div class="card-large">
-                    <img src="../img/course_img_3.png" alt="" class="card-large__img">
+                    <img src="img/course_img_3.png" alt="" class="card-large__img">
                     <div class="card-large__container">
                         <i class="fas fa-folder-open card-large__icon">Natural Science</i>
                         <span class="card-large__value">Free</span>
@@ -218,28 +218,28 @@
             <h3 class="section-achivement__header">our achivements</h3>
             <div class="achivements achivements-grid basic-grid">
                 <div class="achivement-item basic-grid achivement-item-grid">
-                   <img src="../img/acv_logo_1.png" alt="" class="achivement--logo">
+                   <img src="img/acv_logo_1.png" alt="" class="achivement--logo">
                    <div class="achivement__text-container">
                        <p class="achivement__value">4356</p>
                        <p class="achivement__title">website</p>
                    </div> 
                 </div>
                 <div class="achivement-item basic-grid achivement-item-grid">
-                    <img src="../img/acv_logo_2.png" alt="" class="achivement--logo">
+                    <img src="img/acv_logo_2.png" alt="" class="achivement--logo">
                     <div class="achivement__text-container">
                         <p class="achivement__value">4356</p>
                         <p class="achivement__title">website</p>
                     </div>
                 </div>
                 <div class="achivement-item basic-grid achivement-item-grid">
-                    <img src="../img/ac_logo_3.png" alt="" class="achivement--logo">
+                    <img src="img/ac_logo_3.png" alt="" class="achivement--logo">
                     <div class="achivement__text-container">
                         <p class="achivement__value">4356</p>
                         <p class="achivement__title">website</p>
                     </div>
                 </div>
                 <div class="achivement-item basic-grid achivement-item-grid">
-                    <img src="../img/acv_logo_4.png" alt="" class="achivement--logo">
+                    <img src="img/acv_logo_4.png" alt="" class="achivement--logo">
                     <div class="achivement__text-container">
                         <p class="achivement__value">4356</p>
                         <p class="achivement__title">website</p>
